Project structure improvement + docs