@@ -36,8 +36,7 @@ dependencies {
 tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
     options.compilerArgs.addAll(listOf(
-        "-parameters",
-        "--enable-preview"
+        "-parameters"
     ))
 }
 
